--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,8 @@ baseURL = 'https://swiswiswift.com/'
 languageCode = 'ja'
 title = 'すいすいSwift'
 theme = 'swiswiswift'
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
